Username view is instantiated from Main.storyboard removed unnecessary files from project folder configuration on add branch form

--- a/txtbranch/Base.lproj/Main.storyboard
+++ b/txtbranch/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BYN-xm-MJY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="196" y="-970"/>
+            <point key="canvasLocation" x="860" y="-922"/>
         </scene>
         <!--Branch View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -371,7 +371,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="K22-Wt-JZ8" kind="push" id="KOb-EF-9C6"/>
+                                    <segue destination="K22-Wt-JZ8" kind="push" identifier="SignIn" id="KOb-EF-9C6"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -386,7 +386,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8ah-Gf-44Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1316" y="1333"/>
+            <point key="canvasLocation" x="1924" y="1341"/>
         </scene>
         <!--Sign In View Controller-->
         <scene sceneID="Lti-go-S5X">
@@ -411,12 +411,12 @@
                     <navigationItem key="navigationItem" id="DBd-W7-2IS"/>
                     <connections>
                         <outlet property="webView" destination="bWP-FG-EA9" id="e5j-zD-si8"/>
-                        <segue destination="XNU-EY-Ym3" kind="push" id="TYd-Na-czm"/>
+                        <segue destination="XNU-EY-Ym3" kind="push" identifier="CreateUsername" id="TYd-Na-czm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RgQ-5o-Bol" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1944" y="1328"/>
+            <point key="canvasLocation" x="2552" y="1336"/>
         </scene>
         <!--Username View Controller-->
         <scene sceneID="HNq-6H-dOC">
@@ -461,7 +461,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v4h-bS-I7E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2353" y="1328"/>
+            <point key="canvasLocation" x="2961" y="1336"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BVp-G7-lGe">
@@ -476,7 +476,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="duF-Y2-vfj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="276" y="1301"/>
+            <point key="canvasLocation" x="884" y="1309"/>
         </scene>
         <!--Trees View Controller - txtbranch-->
         <scene sceneID="hPF-cU-4Wb">
@@ -565,7 +565,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qpq-d8-1cH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="800" y="1328"/>
+            <point key="canvasLocation" x="1408" y="1336"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
